styles/navbar.css
nav#nav-bar {
  display: flex;
  align-items: center;
  background-color: rgb(var(--dark-blue));
  height: 80px;
  padding: 16px;
  box-sizing: border-box;
  padding-left: 48px;
  padding-right: 48px;
  overflow: hidden;
  box-shadow: 0px 0px 4px 1px rgba(0, 0, 0, 0.3);
}

#nav-logo {
  height: 55px;
}

nav#nav-bar > img,
div.navLinks {
  display: inline;
  vertical-align: middle;
  text-align: center;
  text-decoration: none;
}

div.navLinks {
  margin-left: 48px;
}

div.navLinks > * {
  display: inline;
}

div.navLinks * {
  color: rgb(var(--cool-white));
  text-decoration: none;
  margin: 6px;
}

div.navButtonWrapper {
  position: absolute;
  right: 48px;
}

div.navButtonWrapper > a {
  margin: 12px;
}

div.navButton {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  text-align: center;
  background-color: rgb(var(--gold));
  width: 130px;
  height: 40px;
  border: solid black 1px;
  border-radius: 8px;
  text-decoration: none;
  color: black;
}

